#homescreen fixed not showing image

--- a/src/main/webapp/resources/css/grayscale.css
+++ b/src/main/webapp/resources/css/grayscale.css
@@ -120,8 +120,8 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: white;
-    background: url("#{resource['img:color.jpg']}") no-repeat bottom center scroll;
-    background: linear-gradient(to bottom right, #0a318b, #478956); /* Standard syntax */
+    background: url(#{resource['img:homescreen-bg.jpg']}) no-repeat center center scroll ;
+    background-color: black; /* Standard syntax */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -220,7 +220,7 @@ a:focus {
     width: 100%;
     padding: 50px 0;
     color: white;
-    background: url(/resources/img/patient-register.jpg) no-repeat center center scroll;
+    background: url(#{resource['img:patient-register.jpg']}) no-repeat center center scroll;
     background-color: black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -231,7 +231,7 @@ a:focus {
     width: 100%;
     padding: 50px 0;
     color: white;
-    background: url(/resources/img/doctor-register.jpg) no-repeat center center scroll;
+    background: url(#{resource['img:doctor-register.jpg']}) no-repeat center center scroll;
     background-color: black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -253,6 +253,9 @@ a:focus {
     #map {
         height: 400px;
         margin-top: 250px;
+    }
+    .signin-menu{
+        margin-top: 20%;
     }
 }
 .btn {
@@ -293,6 +296,10 @@ ul.banner-social-buttons {
     ul.banner-social-buttons li:last-child {
         margin-bottom: 0;
     }
+
+    .signin-menu{
+        margin-top: 1%;
+    }
 }
 footer {
     padding: 50px 0;
@@ -318,4 +325,13 @@ img::-moz-selection {
 }
 body {
     webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
+}
+
+.signin-menu-item:hover{
+    color: #2e6da4!important;
+    background: rgba(194, 230, 244, 0.8) !important;
+}
+
+.signin-menu{
+
 }
